--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weatherstack Slideshow</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="slideshow-container">
+        <div class="slide">
+            <h2 id="city-name">Loading...</h2>
+            <img id="weather-icon" src="" alt="Weather Icon">
+            <p id="temperature">...</p>
+            <p id="description">...</p>
+            <p id="humidity">...</p>
+            <p id="wind-speed">...</p>
+        </div>
+        <div class="controls">
+            <input type="text" id="city-input" placeholder="Enter city name">
+            <button id="fetch-button">Get Weather</button>
+        </div>
 
+        <div id="error-message" style="color: red;"></div>
+    </div>
+
+   
+
+    <script src="script.js"></script>
+</body>
+</html>
