--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weatherstack Slideshow</title>
-    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="./style.css">  </head>
 <body>
     <div class="slideshow-container">
         <div class="slide">
@@ -22,11 +21,11 @@
             <button id="fetch-button">Get Weather</button>
         </div>
 
-        <div id="error-message" style="color: rgb(43, 155, 161);"></div>
+        <div id="error-message" style="color: red;"></div>
     </div>
 
    
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
